Overwrite min-height to avoid unneccessary whitespace

--- a/develop/_partials/_blocks.scss
+++ b/develop/_partials/_blocks.scss
@@ -83,6 +83,7 @@
 
 	.content {
 		overflow-x: hidden;
+		min-height: 1px;
 	}
 
 	.header {
